Fix T55754: DOF with new Camera is not working

Was due to non initialized gpu_dof.ratio